<resources>
    <string name="app_name">Client Handler</string>
    <string name="problemQuestion">What everyday problem do you face?</string>
    <string name="toDoListString">Show my ToDoList</string>
    <string name="exitButton">Exit</string>
    <string name="toDoListSoon">There is going to be a toDoList soon&#8230;</string>
    <string name="backDoListSoon">Long click to go back to MainActivity&#8230;</string>
    <string name="settingsActivity">Settings</string>
    <string name="credits">Credits</string>
    <string name="whenAppointment">When would you like to send reminder to your client?:</string>
    <string name="toggleText">Credits text</string>
    <string name="switchText">Show toggle toast?</string>
    <string name="seekText">Use seek bar to adjust brightness</string>
    <string name="widokGrid">Lista Grid</string>
    <string name="goGrid">Grid View</string>
    <string name="defaultSeekbar">Current device screen brightness value is 255</string>
    <string name="listaKlientow">Lista Klientów</string>
    <string name="listaSzkolen">Lista Szkoleń</string>
    <string name="makeCall">Zadzwoń</string>
    <string name="clients">Klienci</string>
    <string name="reservations">Szkolenia</string>
    <string name="deleteClient">Usuń klienta</string>
    <string name="addClient">Dodaj klienta</string>
    <string name="deleteSzkolenie">Usuń szkolenie</string>
    <string name="addSzkolenie">Dodaj szkolenie</string>
    <string name="backToStart">Główne menu</string>
    <string name="instructions">Użyj odczytu odcisku palca, by odblokować aplikację</string>
    <string name="clientName">Imię i nazwisko klienta:</string>
    <string name="clientEmail">Email klienta:</string>
    <string name="clientTelephone">Telefon klienta(999&#8211;999&#8211;999):</string>
    <string name="clientCity">Miasto zamieszkania klienta:</string>
    <string name="clientStreet">Ulica zamieszkania klienta:</string>
    <string name="clientNumber">Numer mieszkania klienta:</string>

    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="access_token" translatable="false">pk.eyJ1IjoicGF3ZWxvOTgiLCJhIjoiY2p2bXBnY3B1MHFyNTQ2bnRzNmJpbW16dyJ9.2lJYrmyz1enBJjDVWLE5fg</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_gps">Map</string>
</resources>
