<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:text="@string/settingsActivity"/>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text1"
        android:id="@+id/sv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="25dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:text="@string/whenAppointment"/>

            <Spinner
                android:id="@+id/spinner1"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:paddingTop="20dp"
                android:padding="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ToggleButton
                android:id="@+id/toggle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:paddingTop="20dp"
                android:padding="15dp"
                android:text="@string/toggleText"/>

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:paddingTop="20dp"
                android:padding="15dp"
                android:text="@string/switchText"
                android:checked="true"/>

            <TextView
                android:id="@+id/text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:paddingTop="20dp"
                android:padding="15dp"
                android:text="@string/seekText"/>

            <SeekBar
                android:id="@+id/seekbar1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingBottom="25dp"/>

            <TextView
                android:id="@+id/text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="25dp"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:paddingTop="20dp"
                android:text="@string/defaultSeekbar"/>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>