<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitySzkolenia">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/linearup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:padding="15dp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/listaSzkolen"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:id="@+id/scroll1"
            android:padding="13dp"
            android:fillViewport="true">

            <ListView
                android:id="@+id/lista3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </ScrollView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="13dp"
            android:id="@+id/linearlow">

            <Button
                android:id="@+id/buttonAdd"
                android:text="@string/addSzkolenie"
                android:padding="7dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="20dp"
                android:layout_gravity="start|center_horizontal"
                android:layout_width="150dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/buttonDelete"
                android:text="@string/deleteSzkolenie"
                android:padding="7dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="30dp"
                android:layout_gravity="end|center_horizontal"
                android:layout_width="150dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.BottomNavigationView
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/bottom_navigation1"
        app:labelVisibilityMode="unlabeled"
        android:background="@color/colorPrimary"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@color/white"
        android:textColor="@color/grey"
        app:menu="@menu/bottom_navigation"/>

</android.support.constraint.ConstraintLayout>